# llm-as-clinical-calculator

./: .gitignore  LICENSE  README.md  globals.py  pyproject.toml  sample_env.txt  tasks.py
analysis/: annotated_runs.csv  choose_calculator_experiment.py  ec_assistant_generate_class_guess.py  error_class_main_fig.py  error_classification_assistant_generate_hints.py  generate_explor_tables.py  get_runs.ipynb  initial_statistics.py  manage_annotation.py  manage_run_data.py  send_to_annotation.ipynb  setup_annotation.ipynb
datasets/: abacus229.csv  abacus409.csv  dataset_usage.md
llm_calc/: app.py
llm_calc/agents/: agent_plan.py  base_agent.py  planner.py
llm_calc/data/: README.md
llm_calc/data/build_database/: .gitattributes  arm.csv  calculator.csv  convert_pdfs_to_md.sh  criterion_option.csv  data.xlsx
llm_calc/data/build_database/cases/: cases.json
llm_calc/data/build_database/excel_as_csvs/: arm.csv  calculator.csv  criterion_option.csv  slugs.csv
llm_calc/data/build_database/reference_material/: template.html
llm_calc/data/build_database/reference_material/condensed_html/: abg.html  ag.html  ariscat.html  (+47 more)
llm_calc/data/build_database/vignette_templates/: ariscat.yaml  caprini.yaml  cci.yaml  gad7.yaml  hasbled.yaml  meldna.yaml  nihss.yaml  psiport.yaml  sofa.yaml  wellsdvt.yaml
llm_calc/data/database/: experiments_database.db  inputs_database.db
llm_calc/data/omc_api_definition/: openapi.json  openapi.yaml  readme.md
llm_calc/data/results/: annotated_trials_counts.xlsx  exploratory_analysis.csv  extrapolated_error_class_counts.xlsx  identified_error_class_counts.xlsx
llm_calc/data/results/tables/: errors_by_arm.tex  errors_by_class.tex  errors_by_llm.tex  errors_by_tool_config.tex
llm_calc/lib/: config.py  database.py  datacore.py  datamodel.py  experiment.py  handler.py  prompts.py  readme.md  vignette.py
llm_calc/tools/: code_interpreter.py  rag.py  structured_output.py
llm_calc/tools/openmedcalc/: __init__.py  api_datamodel.py  calculators_as_tools.py
llm_calc/util/: util.py
results-data/: calculators-list.csv  exploratory-analysis.csv  focused-analysis-results.csv
(+213 files in other folders)
